--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  </header>
 	  <section>
 	    <h2>Обо мне</h2>
-	    <p>Здесь может быть небольшая информация о вас, вашем опыте, умениях и 	достижениях.</p>
+	    <a class="bordered" href ="\steam">Мой стим</a>
 	  </section>
 	  <section>
 	    <h2>Мои работы</h2>
