--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    <p>Добавьте здесь ссылки или изображения ваших проектов, которые вы 	хотите показать.</p>
 	  </section>
 	  <footer>
-	    <p>© 2023 Мое портфолио</p>
+	    <p>© 2023 Мой сайт</p>
 	  </footer>
     
   </head>
