--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  <section>
 	    <h2>Обо мне</h2>
 	    <a class="bordered" href ="\steam">Мой стим</a>
+	    <a class="bordered" href ="slapka">Аккаунты шедеврослапки</a>
 	  </section>
 	  <section>
 	    <h2>Мои работы</h2>
