--- a/slapka/index.html
+++ b/slapka/index.html
@@ -8,8 +8,9 @@
     <!-- <meta property="og:video:height" content="202"> -->
     <!-- <meta property="og:video:width" content="250"> -->
     <h1>Slap Accounts</h1>
+    <div class = boba_robomaga>
     <h3>boba_robamaga</h3>
-    <h4>
+    <pre>
       Obby(ULTRAROCK)
       Bomb(Short fuse)
       Warp(Savior)
@@ -21,10 +22,11 @@
       Plague(Infected)
       Ice skate(On Ice)
       Goofy(CHAOS)
-    </h4>
-
+    </pre>
+    </div>
+    <div class = chilovek_yayko>
     <h3>chilovek_yayko</h3>
-    <h4>
+    <pre>
       Null(The Relic)
       Glitch(01010010 01010101 01001110)
       Jupiter(Death Dodger)
@@ -32,17 +34,19 @@
       Plague(Infected)
       Ice skate(On Ice)
       Goofy(CHAOS)
-    </h4>
-
+    </pre>
+    </div>
+    <div class = kyklamakafonamomy>
     <h3>kyklamakafonamomy</h3>
-    <h4>
+    <pre>
       Elude(Exposed)
       Phase(Unphased)
       Orbit(You monster)
       Plague(Infected)
       Ice skate(On Ice)
       Goofy(CHAOS)
-    </h4>
+    </pre>
+    </div>
 
 
   </head>
