--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4"> -->
     <!-- <meta property="og:video:height" content="202"> -->
     <!-- <meta property="og:video:width" content="250"> -->
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel = "stylesheet" href = "src/css/main.css">
 	  <header>
 	    <h1>Добро пожаловать на мое портфолио</h1>
 	  </header>
 	  <section>
 	    <h2>Обо мне</h2>
-	    <a class="bordered" href ="\steam">Мой стим</a>
-	    <a class="bordered" href ="slapka">Аккаунты шедеврослапки</a>
+	    <a class="bordered" href ="steam.html">Мой стим</a>
+	    <a class="bordered" href ="slapka.html">Аккаунты шедеврослапки</a>
 	  </section>
 	  <section>
 	    <h2>Мои работы</h2>
