--- a/slapka.html
+++ b/slapka.html
@@ -17,9 +17,9 @@
     <div class = "container">
       <div class="box">
         <div class = "item boba_robomaga">
-          <h3 class = "zag">boba_robomaga</h3>
-          <h2 class = "zag">Slaps: 000</h2>
-          <p class = "gloves">
+          <h3 class = "zag block">boba_robomaga</h3>
+          <h2 class = "zag block">Slaps: 000</h2>
+          <p class = "gloves block">
             Obby(ULTRAROCK) <br />
             Bomb(Short fuse) <br />
             Warp(Savior) <br />
@@ -37,9 +37,9 @@
 
         </div>
         <div class = "item chilovek_yayko">
-          <h3 class = "zag">chilovek_yayko</h3>
-          <h2 class = "zag">Slaps: 000</h2>
-          <p class = "gloves">
+          <h3 class = "zag block">chilovek_yayko</h3>
+          <h2 class = "zag block">Slaps: 000</h2>
+          <p class = "gloves block">
             Null(The Relic) <br />
             Glitch(01010010 01010101 01001110) <br />
             Jupiter(Death Dodger) <br />
@@ -52,9 +52,9 @@
 
 
         <div class = "item kyklamakafonamomy">
-          <h3 class = "zag">kyklamakafonamomy</h3>
-          <h2 class = "zag": 0;">Slaps: 000</h2>
-          <p class = "gloves">
+          <h3 class = "zag block">kyklamakafonamomy</h3>
+          <h2 class = "zag block">Slaps: 000</h2>
+          <p class = "gloves block">
             Elude(Exposed) <br />
             Phase(Unphased) <br />
             Orbit(You monster) <br />
