--- a/slapka.html
+++ b/slapka.html
@@ -18,19 +18,20 @@
       <div class="box">
         <div class = "item boba_robomaga">
           <h3 class = "zag block">boba_robomaga</h3>
-          <h2 class = "zag block">Slaps: 000</h2>
+          <h2 class = "zag block">Slaps: 419</h2>
           <p class = "gloves block">
-            Obby(ULTRAROCK) <br />
             Bomb(Short fuse) <br />
             Warp(Savior) <br />
-            Moon(ez) <br />
-            Elude(EXPOSED) <br />
-            Shard(Firefighter) <br />
             Jupiter(Death Dodger) <br />
             Orbit(You monster) <br />
             Plague(Infected) <br />
             Ice skate(On Ice) <br />
             Goofy(CHAOS) <br />
+            Moon(ez) <br />
+            Elude(EXPOSED) <br />
+            Obby(ULTRAROCK) <br />
+            Shard(Firefighter) <br />
+            Jester(Now You See Me) <br />
           </p>
 
 
@@ -38,29 +39,42 @@
         </div>
         <div class = "item chilovek_yayko">
           <h3 class = "zag block">chilovek_yayko</h3>
-          <h2 class = "zag block">Slaps: 000</h2>
+          <h2 class = "zag block">Slaps: 353</h2>
           <p class = "gloves block">
+            Slapple(The Golden Slapple) <br />
             Null(The Relic) <br />
             Glitch(01010010 01010101 01001110) <br />
+            Bomb(Short fuse) <br />
+            Warp(Savior) <br />
             Jupiter(Death Dodger) <br />
             Orbit(You monster) <br />
             Plague(Infected) <br />
             Ice skate(On Ice) <br />
-            Goofy(CHAOS)
+            Goofy(CHAOS) <br />
+            Moon(ez) <br />
+            Elude(EXPOSED) <br />
+            Obby(ULTRAROCK) <br />
+            Shard(Firefighter) <br />
+            Jester(Now You See Me) <br />
           </p>
         </div>
 
 
         <div class = "item kyklamakafonamomy">
           <h3 class = "zag block">kyklamakafonamomy</h3>
-          <h2 class = "zag block">Slaps: 000</h2>
+          <h2 class = "zag block">Slaps: 306</h2>
           <p class = "gloves block">
-            Elude(Exposed) <br />
             Phase(Unphased) <br />
+            Jupiter(Death Dodger) <br />
             Orbit(You monster) <br />
             Plague(Infected) <br />
             Ice skate(On Ice) <br />
-            Goofy(CHAOS)
+            Goofy(CHAOS) <br />
+            Moon(ez) <br />
+            Elude(EXPOSED) <br />
+            Obby(ULTRAROCK) <br />
+            Shard(Firefighter) <br />
+            Jester(Now You See Me) <br />
           </p>
         </div>
       </div>
