--- a/slapka.html
+++ b/slapka.html
@@ -32,6 +32,8 @@
             Obby(ULTRAROCK) <br />
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
+            potato(Sorry to burst your bubble) <br />
+            good job(CULT) <br />
           </p>
 
 
@@ -56,6 +58,8 @@
             Obby(ULTRAROCK) <br />
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
+            potato(Sorry to burst your bubble) <br />
+            good job(CULT) <br />
           </p>
         </div>
 
@@ -75,6 +79,8 @@
             Obby(ULTRAROCK) <br />
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
+            potato(Sorry to burst your bubble) <br />
+            good job(CULT) <br />
           </p>
         </div>
       </div>
