--- a/slapka.html
+++ b/slapka.html
@@ -33,7 +33,7 @@
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
-            good job(CULT) <br />
+            CULT(good job) <br />
           </p>
 
 
@@ -59,7 +59,7 @@
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
-            good job(CULT) <br />
+            CULT(good job) <br />
           </p>
         </div>
 
@@ -80,7 +80,7 @@
             Shard(Firefighter) <br />
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
-            good job(CULT) <br />
+            CULT(good job) <br />
           </p>
         </div>
       </div>
