--- a/slapka.html
+++ b/slapka.html
@@ -18,8 +18,10 @@
       <div class="box">
         <div class = "item boba_robomaga">
           <h3 class = "zag block">boba_robomaga</h3>
-          <h2 class = "zag block">Slaps: 419</h2>
+          <h2 class = "zag block">Slaps: 1091</h2>
           <p class = "gloves block">
+            RNG(RNGod) <br />
+            Phase(Unphased) <br />
             Bomb(Short fuse) <br />
             Warp(Savior) <br />
             Jupiter(Death Dodger) <br />
@@ -66,8 +68,9 @@
 
         <div class = "item kyklamakafonamomy">
           <h3 class = "zag block">kyklamakafonamomy</h3>
-          <h2 class = "zag block">Slaps: 306</h2>
+          <h2 class = "zag block">Slaps: 1084</h2>
           <p class = "gloves block">
+            RNG(RNGod) <br />
             Phase(Unphased) <br />
             Jupiter(Death Dodger) <br />
             Orbit(You monster) <br />
