--- a/slapka/index.html
+++ b/slapka/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel = "stylesheet" href = "src/css/slapka.css">
+    <link rel = "stylesheet" href = "../src/css/slapka.css">
     <meta property="og:image" content="https://raw.githubusercontent.com/MegaMikeFro/tarelke/slapka/src/img/slap.png">
     <!-- <meta property="og:type" content="video.other"> -->
     
