--- a/slapka/index.html
+++ b/slapka/index.html
@@ -20,6 +20,8 @@
           <h3 class = "zag block">boba_robomaga</h3>
           <h2 class = "zag block">Slaps: 1091</h2>
           <p class = "gloves block">
+            Confusion(What) <br />
+            Tycoon(Plate Master)
             RNG(RNGod) <br />
             Phase(Unphased) <br />
             Bomb(Short fuse) <br />
@@ -36,6 +38,7 @@
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
+            Null(The Relic) <br />
           </p>
 
 
@@ -45,8 +48,9 @@
           <h3 class = "zag block">chilovek_yayko</h3>
           <h2 class = "zag block">Slaps: 353</h2>
           <p class = "gloves block">
+            Confusion(What) <br />
             Slapple(The Golden Slapple) <br />
-            Null(The Relic) <br />
+            
             Glitch(01010010 01010101 01001110) <br />
             Bomb(Short fuse) <br />
             Warp(Savior) <br />
@@ -62,6 +66,7 @@
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
+            Null(The Relic) <br />
           </p>
         </div>
 
@@ -70,6 +75,7 @@
           <h3 class = "zag block">kyklamakafonamomy</h3>
           <h2 class = "zag block">Slaps: 1084</h2>
           <p class = "gloves block">
+            Confusion(What) <br />
             RNG(RNGod) <br />
             Phase(Unphased) <br />
             Jupiter(Death Dodger) <br />
@@ -84,6 +90,7 @@
             Jester(Now You See Me) <br />
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
+            Null(The Relic) <br />
           </p>
         </div>
       </div>
