--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  <section>
 	    <h2>Обо мне</h2>
 	    <a class="bordered" href ="steam.html">Мой стим</a>
-	    <a class="bordered" href ="slapka.html">Аккаунты шедеврослапки</a>
+	    <a class="bordered" href ="slapka/index.html">Аккаунты шедеврослапки</a>
 	  </section>
 	  <section>
 	    <h2>Мои работы</h2>
