--- a/slapka/index.html
+++ b/slapka/index.html
@@ -20,8 +20,8 @@
           <h3 class = "zag block">boba_robomaga</h3>
           <h2 class = "zag block">Slaps: 1091</h2>
           <p class = "gloves block">
-            Confusion(What) <br />
-            Tycoon(Plate Master)
+            Tinkerer(Great Escape) <br />
+            Tycoon(Plate Master) <br />
             RNG(RNGod) <br />
             Phase(Unphased) <br />
             Bomb(Short fuse) <br />
@@ -39,6 +39,7 @@
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
             Null(The Relic) <br />
+            Confusion(What) <br />
           </p>
 
 
@@ -48,9 +49,8 @@
           <h3 class = "zag block">chilovek_yayko</h3>
           <h2 class = "zag block">Slaps: 353</h2>
           <p class = "gloves block">
-            Confusion(What) <br />
+            Tinkerer(Great Escape) <br />
             Slapple(The Golden Slapple) <br />
-            
             Glitch(01010010 01010101 01001110) <br />
             Bomb(Short fuse) <br />
             Warp(Savior) <br />
@@ -67,6 +67,7 @@
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
             Null(The Relic) <br />
+            Confusion(What) <br />
           </p>
         </div>
 
@@ -75,7 +76,6 @@
           <h3 class = "zag block">kyklamakafonamomy</h3>
           <h2 class = "zag block">Slaps: 1084</h2>
           <p class = "gloves block">
-            Confusion(What) <br />
             RNG(RNGod) <br />
             Phase(Unphased) <br />
             Jupiter(Death Dodger) <br />
@@ -91,6 +91,7 @@
             potato(Sorry to burst your bubble) <br />
             CULT(good job) <br />
             Null(The Relic) <br />
+            Confusion(What) <br />
           </p>
         </div>
       </div>
