--- a/slapka/index.html
+++ b/slapka/index.html
@@ -40,6 +40,7 @@
             CULT(good job) <br />
             Null(The Relic) <br />
             Confusion(What) <br />
+            Knockoff(Code Breaker) <br />
           </p>
 
 
@@ -68,6 +69,7 @@
             CULT(good job) <br />
             Null(The Relic) <br />
             Confusion(What) <br />
+            Knockoff(Code Breaker) <br />
           </p>
         </div>
 
@@ -92,6 +94,7 @@
             CULT(good job) <br />
             Null(The Relic) <br />
             Confusion(What) <br />
+            Knockoff(Code Breaker) <br />
           </p>
         </div>
       </div>
