--- a/slapka/index.html
+++ b/slapka/index.html
@@ -3,11 +3,6 @@
   <head>
     <link rel = "stylesheet" href = "../src/css/slapka.css">
     <meta property="og:image" content="https://raw.githubusercontent.com/MegaMikeFro/tarelke/slapka/src/img/slap.png">
-    <!-- <meta property="og:type" content="video.other"> -->
-    
-    <!-- <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4"> -->
-    <!-- <meta property="og:video:height" content="202"> -->
-    <!-- <meta property="og:video:width" content="250"> -->
 
   </head>
   <body>
@@ -41,6 +36,8 @@
             Null(The Relic) <br />
             Confusion(What) <br />
             Knockoff(Code Breaker) <br />
+            Alchemist(Containment Breach) <br />
+            Firework(Easy As Pie) <br />
           </p>
 
 
@@ -70,6 +67,8 @@
             Null(The Relic) <br />
             Confusion(What) <br />
             Knockoff(Code Breaker) <br />
+            Alchemist(Containment Breach) <br />
+            Firework(Easy As Pie) <br />
           </p>
         </div>
 
@@ -95,6 +94,8 @@
             Null(The Relic) <br />
             Confusion(What) <br />
             Knockoff(Code Breaker) <br />
+            Alchemist(Containment Breach) <br />
+            Firework(Easy As Pie) <br />
           </p>
         </div>
       </div>
